# pico-ble

./: CMakeLists.txt  README.md  bt_client.c  bt_server.c  btstack_config.h  temp_service.gatt
temp/: CMakeLists.txt  temp.c  temp.h
